--- a/main.html
+++ b/main.html
@@ -8,7 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact us</a></li>
+		</ul>
+	</nav>
+	<h1>3 random audios</h1>
+	<ul>
+		<li><audio href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio></li>
+	   	<li><audio href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio></li>
+		<li><audio href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio></li>
+	</ul>
+
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
