--- a/main.html
+++ b/main.html
@@ -16,11 +16,11 @@
 		</ul>
 	</nav>
 	<h1>3 random audios</h1>
-	<ul>
-		<li><audio href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio></li>
-	   	<li><audio href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio></li>
-		<li><audio href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audio></li>
-	</ul>
+	
+		<audio href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
+	   	<audio href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		<audio href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audi>
+	
 
 		<script type="text/javascript" src="./script.js">
 </script>
