--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
 	</nav>
 	<h1>3 random audios</h1>
 	
-		<audio href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls></audio>
-	   	<audio href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
-		<audio href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls></audi>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls type="audio/mpeg"></audio>
+	   	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls  type="audio/mpeg"></audio>
+		<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls  type="audio/mpeg"></audio>
 	
 
-		<script type="text/javascript" src="./script.js">
+		<scrip aria-controlst type="text/javascript" src="./script.js">
 </script>
 
 </body>
